# Numerical_Finance

./: README.md
NumericalFinance/: CMakeLists.txt  NumericalFinance.sln
NumericalFinance/PDE/: PDE.vcxproj  PDEGrid2D.cpp  R1R1Function.cpp  R2R1Function.cpp  R2R1Function.h
NumericalFinance/Pricer/: BasketOption.cpp  BasketOption.h  BermudanBasketOption.cpp  BermudanBasketOption.h  BermudeanBasketOption.cpp  BermudeanBasketOption.h  EuropeanBasketOption.cpp  EuropeanBasketOption.h
NumericalFinance/QuasiRandomGenerator/: QuasiRandomGenerator.cpp
NumericalFinance/RandomGenerator/: Exponential.cpp  FiniteSet.cpp  KakutaniSequence.cpp  KakutaniSequence.h  LinearCongruential.cpp  Normal.cpp  PAdic.cpp  PAdic.h  Poisson.cpp  QuasiRandomGenerator.cpp  QuasiRandomGenerator.h  RandomGenerator.cpp  RandomGenerator.h  RandomGenerator.vcxproj  RandomGenerator.vcxproj.filters  UniformGenerator.h
NumericalFinance/Results/: antithetic_res_mc.csv  architecture.html  architecture.qmd  bermud_antithetic.csv  bermud_basic.csv  bermud_combined.csv  bermud_kakutani.csv  bermud_scv.csv  combined_res_mc.csv  european_kakutani_antithetic.csv  european_kakutani_only.csv  one_res_mc.csv  scv_res_mc.csv
NumericalFinance/SDE/: BSEuler1D.cpp  BSEuler1D.h  BSEulerND.cpp  BSEulerND.h  BlackScholes1D.cpp  BlackScholesND.cpp  BlackScholesND.h  BrownianND.cpp  BrownianND.h  RandomProcess.h  SDE.vcxproj  SDE.vcxproj.filters  SinglePath.cpp
NumericalFinance/Tester/: Files_Report_Generation.cpp  Tester.cpp  Tester_Alban.cpp  Tester_Faune.cpp
NumericalFinance/Utils/: CSVWriter.cpp  CSVWriter.h  Matrix.cpp  Matrix.h  basic_functions.cpp  basic_functions.h  csv_writer.cpp  csv_writer.h  gen_graphs.ipynb
